--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "discord.js": "^14.0.3",
     "distube": "^4.0.2",
     "eslint-config-prettier": "^8.5.0",
+    "ffmpeg": "^0.0.4",
     "libsodium-wrappers": "^0.7.10"
   },
   "devDependencies": {
