--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "prefix": "Your Bot Prefix",
-  "token": "Your Discord Bot Token",
+  "prefix": "",
+  "token": "MTE3MzU4NzQ3MjA5ODI3MTMwMg.GmgxvI.Fxfm7yAqjziLP-Nl0PiKZrShuJfCk6IY80_ERk",
   "emoji": {
     "play": "▶️",
     "stop": "⏹️",
